# couples_app

./: CMakeLists.txt  main.cpp  main.qml
android/: AndroidManifest.xml
views/: CallAPI.js  DailyQuestionStack.qml  DateIdeasStack.qml  HubView.qml  LinkerView.qml  QuizHistoryDetailView.qml  QuizzesView.qml  RegisterView.qml
views/dailyQuestion/: DailyQuestionResult.qml  DailyQuestionView.qml
views/dateIdeas/: DateIdeasResults.qml  DateIdeasView.qml
views/quizViews/: QuizzesViewCompleted.qml  QuizzesViewCurrent.qml  QuizzesViewLoading.qml  QuizzesViewNoAvailable.qml
